--- a/aboutus.html
+++ b/aboutus.html
@@ -6,11 +6,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-
-<<<<<<< HEAD
-<<<<<<< HEAD
     <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
@@ -18,19 +13,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <!-- endbuild -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-=======
-=======
->>>>>>> 5511ce1d6cdb50d3cd64a291bb644d0f3cedce04
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/styles.css" />
-<<<<<<< HEAD
->>>>>>> a7a4451 (contactus)
-=======
->>>>>>> 5511ce1d6cdb50d3cd64a291bb644d0f3cedce04
-    
+
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
@@ -41,29 +24,19 @@
             <div class="row">
                 <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <a href="index.html"><img src="img/logo.png" class="img-fluid" /></a>
-                 </div>
+                </div>
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-            </div> 
+            </div>
         </div>
     </header>
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
->>>>>>> a7a4451 (contactus)
-=======
->>>>>>> 476b26d (carousel)
-=======
->>>>>>> 5511ce1d6cdb50d3cd64a291bb644d0f3cedce04
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
@@ -73,8 +46,8 @@
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
-            </div>  
-        </div>     
+            </div>
+        </div>
     </nav>
 
     <div class="container">
@@ -84,15 +57,15 @@
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item active">About</li>
                 </ol>
-               <h2>About Us</h2>
-               <hr />
+                <h2>About Us</h2>
+                <hr />
             </div>
         </div>
 
         <div class="row row-content">
             <div class="col-sm-6">
                 <h3>Our Mission</h3>
-                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with  each other.</p>
+                <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
             </div>
             <div class="col-sm-6">
                 <div class="card">
@@ -122,18 +95,15 @@
                         </footer>
                     </blockquote>
                 </div>
-            </div>   
-        </div>  
+            </div>
+        </div>
+
         <div class="row row-content">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-            <div class="col">
-=======
-=======
             <div class="col">
                 <h3>Community Partners</h3>
-                <div id="accordian">
+
+
+                <div id="accordion">
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
@@ -141,13 +111,15 @@
                                     Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
                                 </a>
                             </h4>
-                            <div class="collapse show" id="bootstrap" data-parent="#accordian">
+                            <div class="collapse show" id="bootstrap" data-parent="#accordion">
                                 <div class="card-body">
                                     <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
@@ -155,7 +127,7 @@
                                     Git Out Expeditions <small>Group Adventure Expeditions</small>
                                 </a>
                             </h4>
-                            <div class="collapse" id="git" data-parent="#accordian">
+                            <div class="collapse" id="git" data-parent="#accordion">
                                 <div class="card-body">
                                     <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
                                 </div>
@@ -169,7 +141,7 @@
                                     Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
                                 </a>
                             </h4>
-                            <div class="collapse" id="mongo" data-parent="#accordian">
+                            <div class="collapse" id="mongo" data-parent="#accordion">
                                 <div class="card-body">
                                     <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
                                 </div>
@@ -183,7 +155,7 @@
                                     Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
                                 </a>
                             </h4>
-                            <div class="collapse" id="node" data-parent="#accordian">
+                            <div class="collapse" id="node" data-parent="#accordion">
                                 <div class="card-body">
                                     <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
                                 </div>
@@ -191,114 +163,12 @@
                         </div>
                     </div>
                 </div>
+
+
+
             </div>
         </div>
-        <div class="row row-content">
->>>>>>> 476b26d (carousel)
-            <div class="col-sm-9">
-                <h2>Facts &amp; Figures</h2>
-                <div class="table-responsive">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr class="bg-primary text-light">
-                                <th></th>
-                                <th>2016</th>
-                                <th>2017</th>
-                                <th>2018</th>
-                            </tr>
-                        </thead>
-                        <tbody class="table-primary">
-                            <tr>
-                                <th>Staff Wilderness Experts</th>
-                                <td>10</td>
-                                <td>20</td>
-                                <td>40</td>
-                            </tr>
-                            <tr>
-                                <th>New Campers</th>
-                                <td>256</td>
-                                <td>1,280</td>
-                                <td>5,360</td>
-                            </tr>
-                            <tr>
-                                <th>Square Miles Covered</th>
-                                <td>101,325</td>
-                                <td>423,000</td>
-                                <td>~3,000,000,000</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>                
-            </div>
-       </div> 
-<<<<<<< HEAD
-        <div>
-            <div class= col-12>
->>>>>>> a7a4451 (contactus)
-=======
-            <div class="col">
->>>>>>> 5511ce1d6cdb50d3cd64a291bb644d0f3cedce04
-                <h3>Community Partners</h3>
-                <div id="accordian">
-                    <div class="card">
-                        <div role="tab" class="card-header">
-                            <h4>
-                                <a data-toggle="collapse" data-target="#bootstrap">
-                                    Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
-                                </a>
-                            </h4>
-                            <div class="collapse show" id="bootstrap" data-parent="#accordian">
-                                <div class="card-body">
-                                    <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div role="tab" class="card-header">
-                            <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#git">
-                                    Git Out Expeditions <small>Group Adventure Expeditions</small>
-                                </a>
-                            </h4>
-                            <div class="collapse" id="git" data-parent="#accordian">
-                                <div class="card-body">
-                                    <p class="d-none d-sm-block">Join Git Out Expeditions to explore new horizons with a group of other adventurers!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div role="tab" class="card-header">
-                            <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#mongo">
-                                    Mongo Fly Shop <small>Your Neighborhood Fly Fishing Shop</small>
-                                </a>
-                            </h4>
-                            <div class="collapse" id="mongo" data-parent="#accordian">
-                                <div class="card-body">
-                                    <p class="d-none d-sm-block">Need a new fishing pole, a tacklebox, or flies of all kinds? Stop by Mongo Fly Shop.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div role="tab" class="card-header">
-                            <h4>
-                                <a class="collapsed" data-toggle="collapse" data-target="#node">
-                                    Node Outdoor Apparel <small>Outdoor Clothes & Shoes</small>
-                                </a>
-                            </h4>
-                            <div class="collapse" id="node" data-parent="#accordian">
-                                <div class="card-body">
-                                    <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <div class="row row-content">
             <div class="col-sm-9">
                 <h2>Facts &amp; Figures</h2>
@@ -333,14 +203,9 @@
                             </tr>
                         </tbody>
                     </table>
-                </div>                
+                </div>
             </div>
-       </div> 
-<<<<<<< HEAD
-=======
->>>>>>> 476b26d (carousel)
-=======
->>>>>>> 5511ce1d6cdb50d3cd64a291bb644d0f3cedce04
+        </div>
     </div>
 
     <footer class="site-footer">
@@ -357,37 +222,27 @@
                 </div>
                 <div class="col-6 col-sm-5 text-center">
                     <h5>Social</h5>
-                    <a href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                    <a href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
-                    <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234<br />
-                    <i class="fa fa-envelope fa-lg text-primary"></i> campsites@nucamp.co
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br />
+                    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
-<<<<<<< HEAD
-<<<<<<< HEAD
+
+    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
     <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
     <!-- endbuild -->
-=======
-=======
->>>>>>> 5511ce1d6cdb50d3cd64a291bb644d0f3cedce04
-<!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<<<<<<< HEAD
->>>>>>> 476b26d (carousel)
-=======
->>>>>>> 5511ce1d6cdb50d3cd64a291bb644d0f3cedce04
+
 </body>
 
 </html>
